syntax = "proto3";
package aerophoenix.machine;

service MachineService {
  rpc Ping (PingRequest) returns (PingResponse);
  rpc CreateMachine (CreateRequest) returns (CreateResponse);
  rpc GetMachine (GetRequest) returns (GetResponse);
  rpc StartMachine (ActionRequest) returns (ActionResponse);
  rpc StopMachine (ActionRequest) returns (ActionResponse);
}

message PingRequest {}
message PingResponse {
  string msg = 1;
}

message CreateRequest {
  string name = 1;
  string region = 2;
}

message CreateResponse {
  string id = 1;
  string status = 2;
}

message GetRequest { string id = 1; }
message GetResponse {
  string id = 1;
  string status = 2;
}

message ActionRequest { string id = 1; }
message ActionResponse { string result = 1; }
